systemd (218-2) UNRELEASED; urgency=medium

  * boot-and-services AppArmor autopkgtest: Stop checking the dmesg log; it is
    racy as sometimes message bursts are suppressed.
  * Fix crash in timedatectl with Etc/UTC.

 -- Martin Pitt <mpitt@debian.org>  Mon, 15 Dec 2014 10:54:32 +0100

systemd (218-1) experimental; urgency=medium

  * New upstream release. Drop all cherry-picked patches and port the Debian
    specific ones.
    - Create /etc/machine-id on boot if missing. (LP: #1387090)
  * Add new libmount-dev build dependency.
  * Configure with --enable-split-usr.
  * Merge some permanent Ubuntu changes, using dpkg-vendor:
    - Don't symlink udev doc directories.
    - Add epoch to gudev packages; Ubuntu packaged the standalone gudev before
      it got merged into udev.
    - Add Apport hooks for udev and systemd.
  * udev-fallback-graphics upstart job: Guard the modprobe with || true to
    avoid a failure when vesafb is compiled in. (LP: #1367241)

 -- Martin Pitt <mpitt@debian.org>  Sun, 14 Dec 2014 13:58:39 +0100

systemd (217-4) experimental; urgency=medium

  [ Martin Pitt ]
  * Reinstate a debian/extra/rules/50-firmware.rules which immediately tells
    the kernel that userspace firmware loading failed. Otherwise it tries for a
    minute to call the userspace helper (if CONFIG_FW_LOADER_USER_HELPER is
    enabled) in vain, which causes long delays with devices which have a range
    of possible firmware versions. (LP: #1398458)
  * debian/systemd.postinst: Don't always restart journald, as this currently
    can't be done without losing the current journal and breaking attached
    processes. So only restart it from upgrades < 215-3 (where the socket
    location got moved) as an one-time upgrade path from wheezy.
    (Closes: #771122)
  * Revert "Modify insserv generator to mask sysvinit-only display managers".
    This is still under dispute, a bit risky, and might get a different